Style logo section

--- a/signupForm.html
+++ b/signupForm.html
@@ -20,9 +20,11 @@
 
 
   <div class="logo-section">
-    <div class="logo-img">
-      <img src="./assets/odin-lined.png" alt="The Odin Project Logo">
-      <p>Odin</p>
+    <div class="logo-container">
+      <div class="logo-img">
+        <img src="./assets/odin-lined.png" alt="The Odin Project Logo">
+        <p>Odin</p>
+      </div>
     </div>
     <div class="image-credit">
       <p>Photo by <a href="https://unsplash.com/photos/forest-during-daytime-wQImoykAwGs"
