Style form finished first time

--- a/signupForm.html
+++ b/signupForm.html
@@ -63,7 +63,7 @@
           </p>
           <p>
             <label for="tel-number">Telephone</label>
-            <input type="tel" name="userTel" id="tel-number" pattern="\d*">
+            <input type="tel" name="userTel" id="tel-number" pattern="\d*" placeholder="+8935749285">
             <span class="tel-input"></span>
           </p>
           <p>
