--- a/signupForm.html
+++ b/signupForm.html
@@ -47,34 +47,34 @@
         <fieldset>
           <legend>Let's Gooo!</legend>
           <p>
-            <label for="first-name">First Name* </label>
+            <label for="first-name">First Name * </label>
             <input type="text" name="userFirstName" id="first-name" pattern="[A-Za-z]*" placeholder="Gilman" required>
-            <span class="name-input"></span>
+            <span></span>
           </p>
           <p>
             <label for="email">Email</label>
             <input type="email" name="userEmail" id="email" placeholder="example@something.vi">
-            <span class="email-input"></span>
+            <span></span>
           </p>
           <p>
-            <label for="last-name">Last Name*</label>
+            <label for="last-name">Last Name *</label>
             <input type="text" name="userLastName" id="last-name" pattern="[A-Za-z]*" placeholder="Lastra" required>
-            <span class="name-input"></span>
+            <span></span>
           </p>
           <p>
             <label for="tel-number">Telephone</label>
             <input type="tel" name="userTel" id="tel-number" pattern="\d*" placeholder="+8935749285">
-            <span class="tel-input"></span>
+            <span"></span>
           </p>
           <p>
-            <label for="password">Your Password* </label>
+            <label for="password">Your Password * </label>
             <input type="password" name="userPassword" id="password" minlength="8" maxlength="30" required>
-            <span class="pass-input"></span>
+            <span></span>
           </p>
           <p>
-            <label for="confirm-password">Confirm Password*</label>
+            <label for="confirm-password">Confirm Password *</label>
             <input type="password" name="confPassword" id="confirm-password" minlength="8" maxlength="30" required>
-            <span class="pass-input"></span>
+            <span></span>
           </p>
         </fieldset>
         <button type="submit">Sign me up!</button>
